--- a/game.css
+++ b/game.css
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	--primary-bg: hsl(0, 0%, 98%);
 	--secondary-bg: hsl(0, 0%, 100%);
